add info about package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "create-nuxt-typescript-composition",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "description": "nuxt template based on create-nuxt-app with composition API and Typescript",
+  "repository": "https://github.com/shymelon/nuxt-typescript-composition-template.git",
+  "author": "shymelon <gr.gorlov@yandex.ru>",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
@@ -15,20 +19,20 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/composition-api": "^0.16.4",
-    "core-js": "^3.6.5",
     "@types/nuxtjs__auth": "^4.8.5",
+    "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
-    "@types/nuxtjs__auth": "^4.8.5",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "@types/nuxtjs__auth": "^4.8.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0"
-  }
+  },
 }
